--- a/digweb/digweb/templates/openVeiw/index.html
+++ b/digweb/digweb/templates/openVeiw/index.html
@@ -495,7 +495,7 @@
         <div class="col-md-4 mx-auto">
           <div class="box">
             <img src="{% static 'images/s1.png' %}" alt="" />
-            <a href="{% url 'under_page'%}">
+            <a href="{% url 'cvd_page'%}">
               Cardio Vascular Disease
             </a>
           </div>
@@ -537,7 +537,7 @@
         </div>
       </div>
       <div class="btn-box">
-        <a href="">
+        <a href="{% url 'service_page'%}">
           View All
         </a>
       </div>
