--- a/digweb/digweb/templates/openVeiw/diabetes.html
+++ b/digweb/digweb/templates/openVeiw/diabetes.html
@@ -114,12 +114,8 @@
               </div>
 
               <div class="form-group col-lg-4">
-                <label for="inputPatientBMI">BMI</label>
-                <select name="" class="form-control wide" id="inputPatientBMI">
-                  <option value=1>less than 25 </option>
-                  <option value=2>Between 25 to 30 </option>
-                  <option value=3>more than 30 </option>
-                </select>
+                <label for="inputPatientWeight">Weight (Kg) </label>
+                <input type="number" class="form-control" id="inputDiabetesWeight" placeholder="" step="1" onchange="this.value = Math.max(40, Math.min(250, parseInt(this.value)));">
               </div>
             </div>
             <div class="form-row ">
@@ -129,17 +125,15 @@
               </div>
 
               <div class="form-group col-lg-4">
-                <br>
-                <br>
-                <input type="checkbox" id="inputPatientDrugHistory" name="checkbox1" value="1" class="control__indicator" >
-                <label for="inputPationtDrugHistory" class="check-box">History of use Drug</label>
+                <label for="inputPatientHeight">Height (cm)</label>
+                <input type="number" class="form-control" id="inputPatientHeight" placeholder="" step="1" onchange="this.value = Math.max(40, Math.min(250, parseInt(this.value)));">
               </div>
               
               <div class="form-group col-lg-4">
                 <br>
                 <br>
                 <input type="checkbox" id="inputPationtPhysicalActivity" name="checkbox2" value="1" class="control__indicator">
-                <label for="inputPationtPhysicalActivity">Is your patient physically active for more than 30 minutes every day? </label>
+                <label for="inputPationtPhysicalActivity">Do yo have physical activity for more than 30 minutes every day? </label>
                 </div>
             </div>
 
@@ -147,12 +141,18 @@
               <div class="form-group col-lg-4">
                 
                 <input type="checkbox" id="inputPationtGlucose" name="checkbox3" value="1" class="control__indicator">
-                <label for="inputPationtGlucose">History of family glucose</label>
+                <label for="inputPationtGlucose">Do you have History of family glucose ?</label>
               </div>
               <div class="form-group col-lg-4">
                 
                 <input type="checkbox" id="inputPationtVegetables" name="checkbox4" value="1" class="control__indicator">
-                <label for="inputPationtGlucose">Daily consumption of vegetables, fruits, or berries</label>
+                <label for="inputPationtGlucose">Do you have Daily consumption of vegetables, fruits, or berries ?</label>
+              </div>
+              <div class="form-group col-lg-4">
+                <br>
+                <br>
+                <input type="checkbox" id="inputPatientDrugHistory" name="checkbox1" value="1" class="control__indicator" >
+                <label for="inputPationtDrugHistory" class="check-box">Do you have History of use Drug ?</label>
               </div>
             </div>
 
@@ -194,7 +194,7 @@
         <div class="col-md-4 mx-auto">
           <div class="box">
             <img src="{% static 'images/s1.png' %}" alt="" />
-            <a href="{% url 'under_page'%}">
+            <a href="{% url 'cvd_page'%}">
               Cardiovascular disease
             </a>
           </div>
@@ -220,7 +220,7 @@
       </div>
 
       <div class="btn-box">
-        <a href="">
+        <a href="{% url 'service_page'%}">
           View All
         </a>
       </div>
