--- a/digweb/digweb/templates/openVeiw/service.html
+++ b/digweb/digweb/templates/openVeiw/service.html
@@ -95,7 +95,7 @@
         <div class="col-md-4 mx-auto">
           <div class="box">
             <img src="{% static 'images/s1.png' %}" alt="" />
-            <a href="{% url 'under_page'%}">
+            <a href="{% url 'cvd_page'%}">
               Cardio Vascular Disease
             </a>
           </div>
