--- a/digweb/digweb/templates/openVeiw/service.html
+++ b/digweb/digweb/templates/openVeiw/service.html
@@ -85,7 +85,7 @@
           Our Services
         </h2>
         <p>
-          It is a long established fact that a reader will be distracted
+          You can use other services, click on icon
         </p>
       </div>
       <div class="row">
