add persion font and a lot of change in project

--- a/digweb/digweb/templates/openVeiw/about.html
+++ b/digweb/digweb/templates/openVeiw/about.html
@@ -14,7 +14,7 @@
   <meta name="author" content="" />
   <link rel="shortcut icon" href="{% static 'images/s4.png' %}" type="image/x-icon">
 
-  <title>Thrine</title>
+  <title>AI TEC</title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css'%}" />
@@ -58,7 +58,7 @@
                 <a class="nav-link" href="{% url 'service_page'%}"> Services </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'appointment_page'%}"> Appointment </a>
+                <a class="nav-link" href="{% url 'aboutpr_page'%}"> persian language </a>
               </li>
             </ul>
             <form class="form-inline ">
@@ -132,7 +132,7 @@
                 <a class="nav-link" href="{% url 'service_page'%}"> Services </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'appointment_page'%}"> Appointment </a>
+                <a class="nav-link" href="{% url 'aboutpr_page'%}"> persian language </a>
               </li>
             </ul>
           </div>
