--- a/digweb/digweb/templates/openVeiw/service.html
+++ b/digweb/digweb/templates/openVeiw/service.html
@@ -16,7 +16,7 @@
   <meta name="author" content="" />
   <link rel="shortcut icon" href="{% static 'images/s4.png' %}" type="image/x-icon">
 
-  <title>Thrine</title>
+  <title>َAI TEC</title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}" />
@@ -60,7 +60,7 @@
                 <a class="nav-link" href="{% url 'service_page'%}"> Services <span class="sr-only">(current)</span> </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'appointment_page'%}"> Appointment </a>
+                <a class="nav-link" href="{% url 'servicepr_page'%}"> persian language </a>
               </li>
             </ul>
             <form class="form-inline ">
@@ -94,16 +94,19 @@
         </div>
         <div class="col-md-4 mx-auto">
           <div class="box">
-            <img src="{% static 'images/s1.png' %}" alt="" />
             <a href="{% url 'cvd_page'%}">
+              <img src="{% static 'images/s1.png' %}" alt="" />
+              <br>
               Cardio Vascular Disease
             </a>
           </div>
         </div>
         <div class="col-md-4 mx-auto">
           <div class="box">
-            <img src="{% static 'images/s2.png' %}" alt="" />
+            
             <a href="{% url 'diabetes_page'%}">
+              <img src="{% static 'images/s2.png' %}" alt="" />
+              <br>
               Diabetes
             </a>
           </div>
@@ -113,24 +116,27 @@
         </div>
         <div class="col-md-4 mx-auto">
           <div class="box">
-            <img src="{% static 'images/s3.png' %}" alt="" />
             <a href="{% url 'ckd_page'%}">
+              <img src="{% static 'images/s3.png' %}" alt="" />
+              <br>
               Chronic Kidney Disease
             </a>
           </div>
         </div>
         <div class="col-md-4 mx-auto">
           <div class="box">
-            <img src="{% static 'images/s4.png' %}" alt="" />
             <a href="{% url 'stroke_page'%}">
+              <img src="{% static 'images/s4.png' %}" alt="" />
+              <br>
               Stroke
             </a>
           </div>
         </div>
         <div class="col-md-4 mx-auto">
           <div class="box">
-            <img src="{% static 'images/s5.png' %}" alt="" />
             <a href="{% url 'under_page'%}">
+              <img src="{% static 'images/s5.png' %}" alt="" />
+              <br>
               Therapy
             </a>
           </div>
@@ -176,7 +182,7 @@
                 <a class="nav-link" href="{% url 'service_page'%}"> Services </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'appointment_page'%}"> Appointment </a>
+                <a class="nav-link" href="{% url 'servicepr_page'%}"> persian language </a>
               </li>
             </ul>
           </div>
