--- a/digweb/digweb/templates/openVeiw/cvd.html
+++ b/digweb/digweb/templates/openVeiw/cvd.html
@@ -73,7 +73,7 @@
                 <a class="nav-link" href="{% url 'service_page'%}"> Services <span class="sr-only">(current)</span> </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'appointment_page'%}"> Appointment </a>
+                <a class="nav-link" href="{% url 'cvdpr_page'%}"> persian language </a>
               </li>
             </ul>
             <form class="form-inline ">
@@ -90,7 +90,7 @@
 
   <!-- cvd section -->
 
-  <section class="cvd_section layout_padding">
+  <section class="cvd_section disease_section layout_padding">
     <div class="container">
       <div class="row">
         <div class="col">
@@ -162,6 +162,8 @@
   <!--  discription section -->
   <section class="section_discribe">
     <div class="discribe">
+      <br>
+      <br>
       <p class ="text_result" id="discribe_text"> </p>
     </div>
   </section>
@@ -186,8 +188,9 @@
       
       <div class="col-md-4 mx-auto">
         <div class="box">
-          <img src="{% static 'images/s1.png' %}" alt="" />
           <a href="{% url 'ckd_page'%}">
+            <img src="{% static 'images/s1.png' %}" alt="" />
+            <br>
             Chronic Kidney Disease
           </a>
         </div>
@@ -195,8 +198,9 @@
 
       <div class="col-md-4 mx-auto">
         <div class="box">
-          <img src="{% static 'images/s4.png' %}" alt="" />
           <a href="{% url 'stroke_page'%}">
+            <img src="{% static 'images/s4.png' %}" alt="" />
+            <br>
             Stroke
           </a>
         </div>
@@ -204,8 +208,9 @@
 
       <div class="col-md-4 mx-auto">
         <div class="box">
-          <img src="{% static 'images/s2.png' %}" alt="" />
           <a href="{% url 'diabetes_page'%}">
+            <img src="{% static 'images/s2.png' %}" alt="" />
+            <br>
             Diabetes
           </a>
         </div>
@@ -242,7 +247,7 @@
                 <a class="nav-link" href="{% url 'service_page'%}"> Services </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'appointment_page'%}"> Appointment </a>
+                <a class="nav-link" href="{% url 'cvdpr_page'%}"> persian language </a>
               </li>
             </ul>
           </div>
