--- a/digweb/digweb/templates/persianPage/aboutpr.html
+++ b/digweb/digweb/templates/persianPage/aboutpr.html
@@ -14,10 +14,10 @@
   <meta name="author" content="" />
   <link rel="shortcut icon" href="{% static 'images/s4.png' %}" type="image/x-icon">
 
-  <title>AI TEC</title>
+  <title>درباره ما | خانه هوش مصنوعی </title>
 
   <!-- bootstrap core css -->
-  <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}" />
+  <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css'%}" />
 
   <!-- fonts style -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:400,600,700&display=swap" rel="stylesheet" />
@@ -26,7 +26,7 @@
   <!-- datepicker -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker.css">
   <!-- Custom styles for this template -->
-  <link href="{% static 'css/style.css' %}" rel="stylesheet" />
+  <link href="{% static 'css/function_persian.css' %}" rel="stylesheet" />
   <!-- responsive style -->
   <link href="{% static 'css/responsive.css' %}" rel="stylesheet" />
 </head>
@@ -37,9 +37,9 @@
     <header class="header_section">
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
-          <a class="navbar-brand" href="{% url 'main'%}">
+          <a class="navbar-brand" href="{% url 'mainpr'%}">
             <h3>
-              AI TEC
+              خانه هوش مصنوعی 
             </h3>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,16 +49,16 @@
           <div class="collapse navbar-collapse ml-auto" id="navbarSupportedContent">
             <ul class="navbar-nav  ml-auto">
               <li class="nav-item ">
-                <a class="nav-link" href="{% url 'main'%}">Home </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'about_page'%}"> About </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'service_page'%}"> Services </a>
+                <a class="nav-link" href="{% url 'mainpr'%}">خانه </a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="{% url 'appointment_page'%}"> Appointment <span class="sr-only">(current)</span> </a>
+                <a class="nav-link" href="{% url 'aboutpr_page'%}"> درباره ما <span class="sr-only">(current)</span> </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'servicepr_page'%}"> خدمات </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'about_page'%}">زبان انگلیسی </a>
               </li>
             </ul>
             <form class="form-inline ">
@@ -73,68 +73,33 @@
     <!-- end header section -->
   </div>
 
-  <!-- book section -->
-
-  <section class="book_section layout_padding">
+  <!-- about section -->
+  <section class="about_section layout_padding">
     <div class="container">
-      <div class="row">
-        <div class="col">
-          <form>
-            <h4>
-              <span class="design_dot"></span>
-              BOOK APPOINTMENT
-            </h4>
-            <div class="form-row ">
-              <div class="form-group col-lg-4">
-                <label for="inputPatientName">Patient Name </label>
-                <input type="text" class="form-control" id="inputPatientName" placeholder="">
-              </div>
-              <div class="form-group col-lg-4">
-                <label for="inputDoctorName">Doctor's Name</label>
-                <select name="" class="form-control wide" id="inputDoctorName">
-                  <option value="Normal distribution ">Doctor Name 1</option>
-                  <option value="Normal distribution ">Doctor Name 2 </option>
-                  <option value="Normal distribution ">Doctor Name 3 </option>
-                </select>
-              </div>
-              <div class="form-group col-lg-4">
-                <label for="inputDepartmentName">Department's Name</label>
-                <select name="" class="form-control wide" id="inputDepartmentName">
-                  <option value="Normal distribution ">Cardiology </option>
-                  <option value="Normal distribution ">Surgery </option>
-                  <option value="Normal distribution ">First Aid </option>
-                </select>
-              </div>
-            </div>
-            <div class="form-row ">
-              <div class="form-group col-lg-4">
-                <label for="inputPhone">Phone Number</label>
-                <input type="text" class="form-control" id="inputPhone" placeholder="">
-              </div>
-              <div class="form-group col-lg-4">
-                <label for="inputSymptoms">Symptoms</label>
-                <input type="text" class="form-control" id="inputSymptoms" placeholder="">
-              </div>
-              <div class="form-group col-lg-4">
-                <label for="inputDate">Choose Date </label>
-                <div class="input-group date" id="inputDate" data-date-format="mm-dd-yyyy">
-                  <input type="text" class="form-control" readonly>
-                  <span class="input-group-addon date_icon">
-                    <i class="fa fa-calendar" aria-hidden="true"></i>
-                  </span>
-                </div>
-              </div>
-            </div>
-            <div class="btn-box">
-              <button type="submit" class="btn ">Submit Now</button>
-            </div>
-          </form>
+      <div class="heading_container heading_center">
+        <h2>
+          درباره تیم ما
+          <span class="design_dot"></span>
+        </h2>
+      </div>
+      <div class="col-md-7 mx-auto px-0">
+        <div class="img-box b2">
+          <img src="{% static 'images/about-img.png' %}" alt="" />
+        </div>
+      </div>
+      <div class="col-md-9 mx-auto px-0">
+        <div class="detail-box">
+          <p>
+            تعهد ما به توسعه تشخیص های مبتنی بر هوش مصنوعی است که می تواند به متخصصان مراقبت های بهداشتی در تشخیص زودهنگام و مداخله کمک کند و به مدیریت مؤثرتر بیماری و بهبود نتایج بیمار کمک کند  </p>
+          <a href="">
+            موارد بیشتر
+          </a>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- end book section -->
+  <!-- end about section -->
 
   <!-- map section -->
 
@@ -153,20 +118,20 @@
         <div class="col-md-3">
           <div class="info_menu">
             <h5>
-              QUICK LINKS
+              لینک های سریع
             </h5>
             <ul class="navbar-nav  ">
               <li class="nav-item ">
-                <a class="nav-link" href="{% url 'main'%}">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{% url 'mainpr'%}">خانه <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'about_page'%}"> About </a>
+                <a class="nav-link" href="{% url 'aboutpr_page'%}"> درباره ما </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'service_page'%}"> Services </a>
+                <a class="nav-link" href="{% url 'servicepr_page'%}"> خدمات </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'appointment_page'%}"> Appointment </a>
+                 <a class="nav-link" href="{% url 'about_page'%}"> زبان انگلیسی</a>
               </li>
             </ul>
           </div>
@@ -174,10 +139,10 @@
         <div class="col-md-3">
           <div class="info_course">
             <h5>
-              Thrine Hospital
+              خانه هوش مصنوعی
             </h5>
             <p>
-              AI TEC one subset of Electrooptics Industry IRAN (SAPA) which works with the purpose of developing artificial intelligence
+              خانه هوش مصنوعی یکی از زیرمجموعه های صنعت الکترواپتیک ایران (صاپا) است که با هدف توسعه هوش مصنوعی فعالیت می کند
 
             </p>
           </div>
@@ -186,23 +151,23 @@
         <div class="col-md-5 offset-md-1">
           <div class="info_news">
             <h5>
-              FOR ANY QUERY, PLEASE WRITE TO US
+              برای هر گونه سوال، لطفا برای ما بنویسید
             </h5>
             <div class="info_contact">
               <a href="">
-                <i class="fa fa-map-marker" aria-hidden="true"></i> Location : Isfahan, Isfahan Province, Ostad Falaturi st, Pasargad Shopping mall 
+                <i class="fa fa-map-marker" aria-hidden="true"></i> مکان: اصفهان، استان اصفهان، خیابان استاد فلاطوری، مرکز خرید پاسارگاد
               </a>
               <a href="">
                 <i class="fa fa-envelope" aria-hidden="true"></i> A.I.Tec.IRAN@gmail.com
               </a>
               <a href="">
-                <i class="fa fa-phone" aria-hidden="true"></i> Call : +31 34597406
+                <i class="fa fa-phone" aria-hidden="true"></i> شماره تماس :34597406-031
               </a>
             </div>
             <form action="">
-              <input type="text" placeholder="Enter Your email" />
+              <input type="text" placeholder="ایمیل خود را وارد کنید" />
               <button>
-                Subscribe
+                ارسال
               </button>
             </form>
           </div>
@@ -223,6 +188,7 @@
     </div>
   </footer>
   <!-- footer section -->
+
 
   <script src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
   <script src="{% static 'js/bootstrap.js' %}"></script>
