--- a/digweb/digweb/templates/persianPage/ckdpr.html
+++ b/digweb/digweb/templates/persianPage/ckdpr.html
@@ -2,18 +2,9 @@
 
 <!DOCTYPE html>
 <html>
-  <style>
-    .section_discribe p {
-      font-family: sans-serif;
-      color: rgb(2, 2, 61);
-      font-size: 2.75em;
-      font-style: oblique;
-      float: center;
-      line-height: 3.5rem;
-      text-align: center;
-    }
-    
-    </style>
+<script>
+  var page_number=1;
+</script>
 <head>
   <!-- Basic -->
   <meta charset="utf-8" />
@@ -26,7 +17,7 @@
   <meta name="author" content="" />
   <link rel="shortcut icon" href="{% static 'images/s4.png' %}" type="image/x-icon">
 
-  <title>AI TEC</title>
+  <title>خانه هوش مصنوعی </title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}" />
@@ -38,8 +29,7 @@
   <!-- datepicker -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker.css">
   <!-- Custom styles for this template -->
-  <link href="{% static 'css/style.css' %}" rel="stylesheet" />
-  <link href="{% static 'css/function_style.css' %}" rel="stylesheet" />
+  <link href="{% static 'css/function_persian.css' %}" rel="stylesheet" />
   <!-- responsive style -->
   <link href="{% static 'css/responsive.css' %}" rel="stylesheet" />
   <!-- java script function for calculate risk  -->
@@ -52,9 +42,9 @@
     <header class="header_section">
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
-          <a class="navbar-brand" href="{% url 'main'%}">
+          <a class="navbar-brand" href="{% url 'mainpr'%}">
             <h3>
-              AI TEC
+              خانه هوش مصنوعی
             </h3>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -64,16 +54,16 @@
           <div class="collapse navbar-collapse ml-auto" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item ">
-                <a class="nav-link" href="{% url 'main'%}">Home </a>
+                <a class="nav-link" href="{% url 'mainpr'%}">خانه </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'about_page'%}"> About </a>
+                <a class="nav-link" href="{% url 'aboutpr_page'%}"> درباره ما </a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="{% url 'service_page'%}"> Services <span class="sr-only">(current)</span> </a>
+                <a class="nav-link" href="{% url 'servicepr_page'%}"> خدمات <span class="sr-only">(current)</span> </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'strokepr_page'%}"> persian language </a>
+                <a class="nav-link" href="{% url 'ckd_page'%}"> زبان انگلیسی</a>
               </li>
             </ul>
             <form class="form-inline ">
@@ -88,109 +78,87 @@
     <!-- end header section -->
   </div>
 
-  <!-- stroke section -->
+  <!-- ckd section -->
 
-  <section class="stroke_section disease_section layout_padding">
+  <section class="ckdpr_section persian_disease_section layout_padding">
     <div class="container">
       <div class="row">
         <div class="col">
           <form>
-            <div class="form-row "></div>
-
             <h4>
+              پیش بینی کننده بیماری مزمن کلیه
               <span class="design_dot"></span>
-              Stroke Predictor
             </h4>
             <div class="form-row ">
               <div class="form-group col-lg-4">
-                <label for="inputPatientAge">Age </label>
-                <input type="number" class="form-control" id="inputPatientAge" name="PationtAge" placeholder="" step="1" onchange="this.value = Math.max(0, Math.min(120, parseInt(this.value)));">
+                <label for="inputPatientAge">سن </label>
+                <input type="number" class="form-control" id="inputPatientAge" name="PatientAge" placeholder="" step="1" onchange="this.value = Math.max(0, Math.min(120, parseInt(this.value)));">
               </div>
 
               <div class="form-group col-lg-4">
-                <label for="inputPatientSBPHistory">Sistolic Blood pressure (mm/hg)</label>
-                <input type="number" class="form-control" id="inputPatientSBPHistory" name="PationtAge" placeholder="" step="1" onchange="this.value = Math.max(80, Math.min(200, parseInt(this.value)));">
-              
-              </div>
-
-              <div class="form-group col-lg-4">
-                <label for="inputPatientGender">Gender</label>
+                <label for="inputPatientGender">جنسیت</label>
                 <select name="" class="form-control wide" id="inputPatientGender">
-                  <option value=1>Male</option>
-                  <option value=2>Female </option>
+                  <option value=0>مرد</option>
+                  <option value=1>زن </option>
                 </select>
-                </div>
+              </div>
+
+              <div class="form-group col-lg-4">
+                <br>
+                <br>
+                <label for="inputPationtAnemia" class="check-box">آیا کم خونی دارید؟</label>
+                <input type="checkbox" id="inputPatientAnemia" name="checkbox1" value=1 class="control__indicator">
+              </div>
             </div>
             <div class="form-row ">
               <div class="form-group col-lg-4">
                 <br>
                 <br>
+                <label for="inputPationtDrugHistory" class="check-box">آیا سابقه مصرف داروی مرتبط را دارید ؟</label>
                 <input type="checkbox" id="inputPatientDrugHistory" name="checkbox1" value="1" class="control__indicator">
-                <label for="inputPationtDrugHistory" class="check-box">Do you use related medicine?</label>
-              
-                
               </div>
 
               <div class="form-group col-lg-4">
                 <br>
                 <br>
-                <input type="checkbox" id="inputPatientDiabetes" name="checkbox1" value="1" class="control__indicator">
-                <label for="inputPatientDiabetes" class="check-box">Do you have Diabetes ?</label>
+                <label for="inputPationtHypertension" class="check-box">آیا فشار خون بالا دارید؟</label>
+                <input type="checkbox" id="inputPatientHypertension" name="checkbox1" value="1" class="control__indicator">
               </div>
-              
+      
               <div class="form-group col-lg-4">
                 <br>
                 <br>
-                <input type="checkbox" id="inputPationtSmoke" name="checkbox2" value="1" class="control__indicator">
-                <label for="inputPationtSmoke">Do you smoke? </label>
-                </div>
+                <label for="inputPationtHistoryCVD">آیا سابقه بیماری قلبی و عروقی دارید ؟ </label>
+                <input type="checkbox" id="inputPationtHistoryCVD" name="checkbox2" value="1" class="control__indicator">  
+              </div>
             </div>
 
             <div class="form-row ">
               <div class="form-group col-lg-4">
-                <br>
-                <br>
-                <input type="checkbox" id="inputPationtCVD" name="checkbox3" value="1" class="control__indicator">
-                <label for="inputPationtGlucose">Do you have cardiovascular disease ? </label>
+                
+                <label for="inputPationtHistoryCHF">آیا سابقه نارسایی احتقانی قلب دارید؟</label>
+                <input type="checkbox" id="inputPationtHistoryCHF" name="checkbox3" value="1" class="control__indicator">
               </div>
               <div class="form-group col-lg-4">
-                <br>
-                <br>
-                <input type="checkbox" id="inputPationtAF" name="checkbox4" value="1" class="control__indicator">
-                <label for="inputPationtGlucose">Do you have Atrial fibrillation ?</label>
+                <label for="inputPationtPVD">آیا بیماری عروق محیطی دارید؟</label>
+                <input type="checkbox" id="inputPationtPVD" name="checkbox4" value="1" class="control__indicator">
               </div>
               <div class="form-group col-lg-4">
-                <br>
-                <br>
-                <input type="checkbox" id="inputPationtLVH" name="checkbox4" value="1" class="control__indicator">
-                <label for="inputPationtGlucose">Do you have Left ventricular hypertrophy ?</label>
+                <label for="inputPationtProteinuria">آیا شما پروتئینوری دارید ؟</label>
+                <input type="checkbox" id="inputPationtProteinuria" name="checkbox4" value="1" class="control__indicator">
               </div>
             </div>
+
             <div class="form-row ">
-              
               <div class="form-group col-lg-4">
-                <br>
-                <label for="years">year risk ?</label>
-          
-                <select name="" class="form-control wide" id="year">
-                  <option value=1>1</option>
-                  <option value=2>2</option>
-                  <option value=3>3</option>
-                  <option value=4>4</option>
-                  <option value=5>5</option>
-                  <option value=6>6</option>
-                  <option value=7>7</option>
-                  <option value=8>8</option>
-                  <option value=9>9</option>
-                  <option value=10>10</option>
-                </select>
                 
+                <label for="inputPationtDM">آیا دیابت دارید ؟</label>
+                <input type="checkbox" id="inputPationtDM" name="checkbox3" value="1" class="control__indicator">
               </div>
-              
             </div>
 
             <div class="btn-box">
-              <button type="button" class="btn " onclick="stroke_Results();">Calculate Now</button>
+              <button type="button" class="btn " onclick="ckd_Results(page_number);">محاسبه ریسک</button>
             </div>
           </form>
         </div>
@@ -198,16 +166,17 @@
     </div>
   </section>
 
-  <!-- end stroke section -->
-<!--  discription section -->
-<section class="section_discribe">
-  <div class="discribe">
-    <br>
-    <br>
-    <p class ="text_result" id="discribe_text"> </p>
-  </div>
-</section>
-<!-- end discription section -->
+  <!-- end ckd section -->
+
+  <!--  discription section -->
+  <section class="section_discribe">
+    <div class="discribe">
+      <br>
+      <br>
+      <p class ="text_result" id="discribe_text"> </p>
+    </div>
+  </section>
+  <!-- end discription section -->
 
 <!-- service section -->
 
@@ -215,51 +184,49 @@
   <div class="container">
     <div class="heading_container heading_center">
       <h2>
+        دیگر خدمات ما
         <span class="design_dot"></span>
-        Our other Services
       </h2>
       <p>
-        You can use other services, click on icon
+        شما می توانید از خدمات دیگر ما استفاده کنید، کافی است روی آن ها کلیک کنید
       </p>
     </div>
     <div class="row">
-
-     
       
       <div class="col-md-4 mx-auto">
         <div class="box">
-          <a href="{% url 'cvd_page'%}">
+          <a href="{% url 'cvdpr_page'%}">
             <img src="{% static 'images/s1.png' %}" alt="" />
             <br>
-            Cardiovascular disease
+            پیش بینی بیماری قلبی و عروقی
           </a>
         </div>
       </div>
 
       <div class="col-md-4 mx-auto">
         <div class="box">
-          <a href="{% url 'ckd_page'%}">
-            <img src="{% static 'images/s3.png' %}" alt="" />
+          <a href="{% url 'strokepr_page'%}">
+            <img src="{% static 'images/s4.png' %}" alt="" />
             <br>
-            Chronic Kidney Disease
+            پیش بینی سکته
           </a>
         </div>
       </div>
 
       <div class="col-md-4 mx-auto">
         <div class="box">
-          <a href="{% url 'diabetes_page'%}">
+          <a href="{% url 'diabetespr_page'%}">
             <img src="{% static 'images/s2.png' %}" alt="" />
             <br>
-            Diabetes
+            پیش بینی دیابت
           </a>
         </div>
       </div>
     </div>
 
     <div class="btn-box">
-      <a href="{% url 'service_page'%}">
-        View All
+      <a href="{% url 'servicepr_page'%}">
+        نمایش همه
       </a>
     </div>
   </div>
@@ -274,20 +241,20 @@
         <div class="col-md-3">
           <div class="info_menu">
             <h5>
-              QUICK LINKS
+              لینک های سریع
             </h5>
             <ul class="navbar-nav  ">
               <li class="nav-item ">
-                <a class="nav-link" href="{% url 'main'%}">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{% url 'mainpr'%}">خانه <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'about_page'%}"> About </a>
+                <a class="nav-link" href="{% url 'aboutpr_page'%}"> درباره ما </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'service_page'%}"> Services </a>
+                <a class="nav-link" href="{% url 'servicepr_page'%}"> خدمات </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'strokepr_page'%}"> persian language </a>
+                <a class="nav-link" href="{% url 'ckd_page'%}"> زبان انگلیسی</a>
               </li>
             </ul>
           </div>
@@ -295,10 +262,10 @@
         <div class="col-md-3">
           <div class="info_course">
             <h5>
-              AI TEC
+              خانه هوش مصنوعی
             </h5>
             <p>
-              AI TEC one subset of Electrooptics Industry IRAN (SAPA) which works with the purpose of developing artificial intelligence
+              خانه هوش مصنوعی یکی از زیرمجموعه های صنعت الکترواپتیک ایران (صاپا) است که با هدف توسعه هوش مصنوعی فعالیت می کند
 
             </p>
           </div>
@@ -307,23 +274,23 @@
         <div class="col-md-5 offset-md-1">
           <div class="info_news">
             <h5>
-              FOR ANY QUERY, PLEASE WRITE TO US
+              برای هر گونه سوال، لطفا برای ما بنویسید
             </h5>
             <div class="info_contact">
               <a href="">
-                <i class="fa fa-map-marker" aria-hidden="true"></i> Location : Isfahan, Isfahan Province, Ostad Falaturi st, Pasargad Shopping mall 
+                <i class="fa fa-map-marker" aria-hidden="true"></i> مکان: اصفهان، استان اصفهان، خیابان استاد فلاطوری، مرکز خرید پاسارگاد
               </a>
               <a href="">
                 <i class="fa fa-envelope" aria-hidden="true"></i> A.I.Tec.IRAN@gmail.com
               </a>
               <a href="">
-                <i class="fa fa-phone" aria-hidden="true"></i> Call : +31 34597406
+                <i class="fa fa-phone" aria-hidden="true"></i> شماره تماس :34597406-031
               </a>
             </div>
             <form action="">
-              <input type="text" placeholder="Enter Your email" />
+              <input type="text" placeholder="ایمیل خود را وارد کنید" />
               <button>
-                Subscribe
+                ارسال
               </button>
             </form>
           </div>
