--- a/digweb/digweb/templates/persianPage/servicepr.html
+++ b/digweb/digweb/templates/persianPage/servicepr.html
@@ -1,4 +1,6 @@
+
 {% load static %}
+
 <!DOCTYPE html>
 <html>
 
@@ -14,7 +16,7 @@
   <meta name="author" content="" />
   <link rel="shortcut icon" href="{% static 'images/s4.png' %}" type="image/x-icon">
 
-  <title>AI TEC</title>
+  <title>خدمات | خانه هوش مصنوعی </title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}" />
@@ -26,7 +28,7 @@
   <!-- datepicker -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker.css">
   <!-- Custom styles for this template -->
-  <link href="{% static 'css/style.css' %}" rel="stylesheet" />
+  <link href="{% static 'css/function_persian.css' %}" rel="stylesheet" />
   <!-- responsive style -->
   <link href="{% static 'css/responsive.css' %}" rel="stylesheet" />
 </head>
@@ -37,9 +39,9 @@
     <header class="header_section">
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
-          <a class="navbar-brand" href="{% url 'main'%}">
+          <a class="navbar-brand" href="{% url 'mainpr'%}">
             <h3>
-              AI TEC
+              خانه هوش مصنوعی
             </h3>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,18 +49,18 @@
           </button>
 
           <div class="collapse navbar-collapse ml-auto" id="navbarSupportedContent">
-            <ul class="navbar-nav  ml-auto">
+            <ul class="navbar-nav ml-auto">
               <li class="nav-item ">
-                <a class="nav-link" href="{% url 'main'%}">Home </a>
+                <a class="nav-link" href="{% url 'mainpr'%}">خانه </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'about_page'%}"> About </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'service_page'%}"> Services </a>
+                <a class="nav-link" href="{% url 'aboutpr_page'%}"> درباره ما </a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="{% url 'appointment_page'%}"> Appointment <span class="sr-only">(current)</span> </a>
+                <a class="nav-link" href="{% url 'servicepr_page'%}"> خدمات <span class="sr-only">(current)</span> </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'service_page'%}"> زبان انگلیسی</a>
               </li>
             </ul>
             <form class="form-inline ">
@@ -73,68 +75,81 @@
     <!-- end header section -->
   </div>
 
-  <!-- book section -->
+  <!-- service section -->
 
-  <section class="book_section layout_padding">
+  <section class="service_section layout_padding">
     <div class="container">
+      <div class="heading_container heading_center">
+        <h2>
+          خدمات ما
+          <span class="design_dot"></span>
+        </h2>
+        <p>
+          شما می توانید از خدمات دیگر ما استفاده کنید، کافی است روی آن ها کلیک کنید
+        </p>
+      </div>
       <div class="row">
-        <div class="col">
-          <form>
-            <h4>
-              <span class="design_dot"></span>
-              BOOK APPOINTMENT
-            </h4>
-            <div class="form-row ">
-              <div class="form-group col-lg-4">
-                <label for="inputPatientName">Patient Name </label>
-                <input type="text" class="form-control" id="inputPatientName" placeholder="">
-              </div>
-              <div class="form-group col-lg-4">
-                <label for="inputDoctorName">Doctor's Name</label>
-                <select name="" class="form-control wide" id="inputDoctorName">
-                  <option value="Normal distribution ">Doctor Name 1</option>
-                  <option value="Normal distribution ">Doctor Name 2 </option>
-                  <option value="Normal distribution ">Doctor Name 3 </option>
-                </select>
-              </div>
-              <div class="form-group col-lg-4">
-                <label for="inputDepartmentName">Department's Name</label>
-                <select name="" class="form-control wide" id="inputDepartmentName">
-                  <option value="Normal distribution ">Cardiology </option>
-                  <option value="Normal distribution ">Surgery </option>
-                  <option value="Normal distribution ">First Aid </option>
-                </select>
-              </div>
-            </div>
-            <div class="form-row ">
-              <div class="form-group col-lg-4">
-                <label for="inputPhone">Phone Number</label>
-                <input type="text" class="form-control" id="inputPhone" placeholder="">
-              </div>
-              <div class="form-group col-lg-4">
-                <label for="inputSymptoms">Symptoms</label>
-                <input type="text" class="form-control" id="inputSymptoms" placeholder="">
-              </div>
-              <div class="form-group col-lg-4">
-                <label for="inputDate">Choose Date </label>
-                <div class="input-group date" id="inputDate" data-date-format="mm-dd-yyyy">
-                  <input type="text" class="form-control" readonly>
-                  <span class="input-group-addon date_icon">
-                    <i class="fa fa-calendar" aria-hidden="true"></i>
-                  </span>
-                </div>
-              </div>
-            </div>
-            <div class="btn-box">
-              <button type="submit" class="btn ">Submit Now</button>
-            </div>
-          </form>
+        <div class="col-md-2">
+
         </div>
+        <div class="col-md-4 mx-auto">
+          <div class="box">
+            <a href="{% url 'cvdpr_page'%}">
+              <img src="{% static 'images/s1.png' %}" alt="" />
+              <br>
+              پیش بینی بیماری قلبی و عروقی
+            </a>
+          </div>
+        </div>
+        <div class="col-md-4 mx-auto">
+          <div class="box">
+            <a href="{% url 'diabetespr_page'%}">
+              <img src="{% static 'images/s2.png' %}" alt="" />
+              <br>
+              پیش بینی بیماری دیابت
+            </a>
+          </div>
+        </div>
+        <div class="col-md-2">
+
+        </div>
+        <div class="col-md-4 mx-auto">
+          <div class="box">
+            <a href="{% url 'ckdpr_page'%}">
+              <img src="{% static 'images/s3.png' %}" alt="" />
+              <br>
+              پیش بینی بیماری مزمن کلیوی
+            </a>
+          </div>
+        </div>
+        <div class="col-md-4 mx-auto">
+          <div class="box">
+            <a href="{% url 'strokepr_page'%}">
+              <img src="{% static 'images/s4.png' %}" alt="" />
+              <br>
+              پیش بینی سکته
+            </a>
+          </div>
+        </div>
+        <div class="col-md-4 mx-auto">
+          <div class="box">
+            <a href="{% url 'under_page'%}">
+              <img src="{% static 'images/s5.png' %}" alt="" />
+              <br>
+              درمان
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="btn-box">
+        <a href="">
+          نمایش همه
+        </a>
       </div>
     </div>
   </section>
 
-  <!-- end book section -->
+  <!-- end service section -->
 
   <!-- map section -->
 
@@ -153,20 +168,20 @@
         <div class="col-md-3">
           <div class="info_menu">
             <h5>
-              QUICK LINKS
+              لینک های سریع
             </h5>
             <ul class="navbar-nav  ">
               <li class="nav-item ">
-                <a class="nav-link" href="{% url 'main'%}">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{% url 'mainpr'%}">خانه <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'about_page'%}"> About </a>
+                <a class="nav-link" href="{% url 'aboutpr_page'%}"> درباره ما </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'service_page'%}"> Services </a>
+                <a class="nav-link" href="{% url 'servicepr_page'%}"> خدمات </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'appointment_page'%}"> Appointment </a>
+                <a class="nav-link" href="{% url 'service_page'%}"> زبان انگلیسی</a>
               </li>
             </ul>
           </div>
@@ -174,10 +189,10 @@
         <div class="col-md-3">
           <div class="info_course">
             <h5>
-              Thrine Hospital
+              خانه هوش مصنوعی
             </h5>
             <p>
-              AI TEC one subset of Electrooptics Industry IRAN (SAPA) which works with the purpose of developing artificial intelligence
+              خانه هوش مصنوعی یکی از زیرمجموعه های صنعت الکترواپتیک ایران (صاپا) است که با هدف توسعه هوش مصنوعی فعالیت می کند
 
             </p>
           </div>
@@ -186,23 +201,23 @@
         <div class="col-md-5 offset-md-1">
           <div class="info_news">
             <h5>
-              FOR ANY QUERY, PLEASE WRITE TO US
+              برای هر گونه سوال، لطفا برای ما بنویسید
             </h5>
             <div class="info_contact">
               <a href="">
-                <i class="fa fa-map-marker" aria-hidden="true"></i> Location : Isfahan, Isfahan Province, Ostad Falaturi st, Pasargad Shopping mall 
+                <i class="fa fa-map-marker" aria-hidden="true"></i> مکان: اصفهان، استان اصفهان، خیابان استاد فلاطوری، مرکز خرید پاسارگاد
               </a>
               <a href="">
                 <i class="fa fa-envelope" aria-hidden="true"></i> A.I.Tec.IRAN@gmail.com
               </a>
               <a href="">
-                <i class="fa fa-phone" aria-hidden="true"></i> Call : +31 34597406
+                <i class="fa fa-phone" aria-hidden="true"></i> شماره تماس :34597406-031
               </a>
             </div>
             <form action="">
-              <input type="text" placeholder="Enter Your email" />
+              <input type="text" placeholder="ایمیل خود را وارد کنید" />
               <button>
-                Subscribe
+                ارسال
               </button>
             </form>
           </div>
